test/compile_errors/stage1/obj/redefinition_of_global_variables.zig
var a : i32 = 1;
var a : i32 = 2;

// redefinition of global variables
//
// tmp.zig:2:1: error: redeclaration of 'a'
// tmp.zig:1:1: note: other declaration here
